prqlc/prqlc/src/semantic/resolver/snapshots/prqlc__semantic__resolver__test__frames_and_names-3.snap
---
source: prqlc/prqlc/src/semantic/resolver/mod.rs
expression: "resolve_lineage(r#\"\n            from e = employees\n            join salaries (==emp_no)\n            group {e.emp_no, e.gender} (\n                aggregate {\n                    emp_salary = average salaries.salary\n                }\n            )\n            \"#).unwrap()"
---
columns:
  - Single:
      name:
        - e
        - emp_no
      target_id: 133
      target_name: ~
  - Single:
      name:
        - e
        - gender
      target_id: 134
      target_name: ~
  - Single:
      name:
        - emp_salary
      target_id: 152
      target_name: ~
inputs:
  - id: 124
    name: e
    table:
      - default_db
      - employees
  - id: 121
    name: salaries
    table:
      - default_db
      - salaries
