prqlc/prqlc/src/semantic/resolver/snapshots/prqlc__semantic__resolver__test__frames_and_names.snap
---
source: prqlc/prqlc/src/semantic/resolver/mod.rs
expression: "resolve_lineage(r#\"\n            from orders\n            select {customer_no, gross, tax, gross - tax}\n            take 20\n            \"#).unwrap()"
---
columns:
  - Single:
      name:
        - orders
        - customer_no
      target_id: 130
      target_name: ~
  - Single:
      name:
        - orders
        - gross
      target_id: 131
      target_name: ~
  - Single:
      name:
        - orders
        - tax
      target_id: 132
      target_name: ~
  - Single:
      name: ~
      target_id: 133
      target_name: ~
inputs:
  - id: 128
    name: orders
    table:
      - default_db
      - orders
