prqlc/prqlc/src/semantic/resolver/snapshots/prqlc__semantic__resolver__test__variables_1.snap
---
source: prqlc/prqlc/src/semantic/resolver/mod.rs
expression: "resolve_derive(r#\"\n            from employees\n            derive {\n                gross_salary = salary + payroll_tax,\n                gross_cost =   gross_salary + benefits_cost\n            }\n            \"#).unwrap()"
---
- RqOperator:
    name: std.add
    args:
      - Ident:
          - this
          - employees
          - salary
        span: "1:80-86"
      - Ident:
          - this
          - employees
          - payroll_tax
        span: "1:89-100"
  span: "1:80-100"
  alias: gross_salary
- RqOperator:
    name: std.add
    args:
      - Ident:
          - this
          - gross_salary
        span: "1:133-145"
      - Ident:
          - this
          - employees
          - benefits_cost
        span: "1:148-161"
  span: "1:133-161"
  alias: gross_cost
